@@ -18,16 +18,10 @@
     		WHERE id='$f_id'";
    	$result = db_query($query);
 
-   	$t_redirect_url = $g_view_bug_advanced_page."?f_id=".$f_id;
-?>
-<?php print_page_top1() ?>
-<?php
+	$t_redirect_url = get_view_redirect_url( $f_id, 1 );
 	if ( $result ) {
-		print_meta_redirect( $t_redirect_url );
+		print_header_redirect( $t_redirect_url );
+	} else {
+		print_mantis_error( ERROR_GENERIC );
 	}
 ?>
-<?php print_page_top2() ?>
-
-<?php print_proceed( $result, $query, $t_redirect_url ) ?>
-
-<?php print_page_bot1( __FILE__ ) ?>
